shaderc-bindings/src/main/java/io/github/yetyman/shaderc/generated/ShadercFFM.java


    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_hlsl_functionality1(shaderc_compile_options_t options, int enable)
     * }
     */
    public static FunctionDescriptor shaderc_compile_options_set_hlsl_functionality1$descriptor() {
        return shaderc_compile_options_set_hlsl_functionality1.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_hlsl_functionality1(shaderc_compile_options_t options, int enable)
     * }
     */
    public static MethodHandle shaderc_compile_options_set_hlsl_functionality1$handle() {
        return shaderc_compile_options_set_hlsl_functionality1.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_hlsl_functionality1(shaderc_compile_options_t options, int enable)
     * }
     */
    public static MemorySegment shaderc_compile_options_set_hlsl_functionality1$address() {
        return shaderc_compile_options_set_hlsl_functionality1.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void shaderc_compile_options_set_hlsl_functionality1(shaderc_compile_options_t options, int enable)
     * }
     */
    public static void shaderc_compile_options_set_hlsl_functionality1(MemorySegment options, int enable) {
        var mh$ = shaderc_compile_options_set_hlsl_functionality1.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("shaderc_compile_options_set_hlsl_functionality1", options, enable);
            }
            mh$.invokeExact(options, enable);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class shaderc_compile_options_set_invert_y {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            ShadercFFM.C_POINTER,
            ShadercFFM.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("shaderc_compile_options_set_invert_y");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_invert_y(shaderc_compile_options_t options, int enable)
     * }
     */
    public static FunctionDescriptor shaderc_compile_options_set_invert_y$descriptor() {
        return shaderc_compile_options_set_invert_y.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_invert_y(shaderc_compile_options_t options, int enable)
     * }
     */
    public static MethodHandle shaderc_compile_options_set_invert_y$handle() {
        return shaderc_compile_options_set_invert_y.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_invert_y(shaderc_compile_options_t options, int enable)
     * }
     */
    public static MemorySegment shaderc_compile_options_set_invert_y$address() {
        return shaderc_compile_options_set_invert_y.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void shaderc_compile_options_set_invert_y(shaderc_compile_options_t options, int enable)
     * }
     */
    public static void shaderc_compile_options_set_invert_y(MemorySegment options, int enable) {
        var mh$ = shaderc_compile_options_set_invert_y.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("shaderc_compile_options_set_invert_y", options, enable);
            }
            mh$.invokeExact(options, enable);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class shaderc_compile_options_set_nan_clamp {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            ShadercFFM.C_POINTER,
            ShadercFFM.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("shaderc_compile_options_set_nan_clamp");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_nan_clamp(shaderc_compile_options_t options, int enable)
     * }
     */
    public static FunctionDescriptor shaderc_compile_options_set_nan_clamp$descriptor() {
        return shaderc_compile_options_set_nan_clamp.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_nan_clamp(shaderc_compile_options_t options, int enable)
     * }
     */
    public static MethodHandle shaderc_compile_options_set_nan_clamp$handle() {
        return shaderc_compile_options_set_nan_clamp.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_nan_clamp(shaderc_compile_options_t options, int enable)
     * }
     */
    public static MemorySegment shaderc_compile_options_set_nan_clamp$address() {
        return shaderc_compile_options_set_nan_clamp.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void shaderc_compile_options_set_nan_clamp(shaderc_compile_options_t options, int enable)
     * }
     */
    public static void shaderc_compile_options_set_nan_clamp(MemorySegment options, int enable) {
        var mh$ = shaderc_compile_options_set_nan_clamp.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("shaderc_compile_options_set_nan_clamp", options, enable);
            }
            mh$.invokeExact(options, enable);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class shaderc_compile_into_spv {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ShadercFFM.C_POINTER,
            ShadercFFM.C_POINTER,
            ShadercFFM.C_POINTER,
            ShadercFFM.C_LONG_LONG,
            ShadercFFM.C_INT,
            ShadercFFM.C_POINTER,
            ShadercFFM.C_POINTER,
            ShadercFFM.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("shaderc_compile_into_spv");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * shaderc_compilation_result_t shaderc_compile_into_spv(const shaderc_compiler_t compiler, const char *source_text, size_t source_text_size, shaderc_shader_kind shader_kind, const char *input_file_name, const char *entry_point_name, const shaderc_compile_options_t additional_options)
     * }
     */
    public static FunctionDescriptor shaderc_compile_into_spv$descriptor() {
        return shaderc_compile_into_spv.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * shaderc_compilation_result_t shaderc_compile_into_spv(const shaderc_compiler_t compiler, const char *source_text, size_t source_text_size, shaderc_shader_kind shader_kind, const char *input_file_name, const char *entry_point_name, const shaderc_compile_options_t additional_options)
     * }
     */
    public static MethodHandle shaderc_compile_into_spv$handle() {
        return shaderc_compile_into_spv.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * shaderc_compilation_result_t shaderc_compile_into_spv(const shaderc_compiler_t compiler, const char *source_text, size_t source_text_size, shaderc_shader_kind shader_kind, const char *input_file_name, const char *entry_point_name, const shaderc_compile_options_t additional_options)
     * }
     */
    public static MemorySegment shaderc_compile_into_spv$address() {
        return shaderc_compile_into_spv.ADDR;
    }

    /**
     * {@snippet lang=c :
     * shaderc_compilation_result_t shaderc_compile_into_spv(const shaderc_compiler_t compiler, const char *source_text, size_t source_text_size, shaderc_shader_kind shader_kind, const char *input_file_name, const char *entry_point_name, const shaderc_compile_options_t additional_options)
     * }
     */
    public static MemorySegment shaderc_compile_into_spv(MemorySegment compiler, MemorySegment source_text, long source_text_size, int shader_kind, MemorySegment input_file_name, MemorySegment entry_point_name, MemorySegment additional_options) {
        var mh$ = shaderc_compile_into_spv.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("shaderc_compile_into_spv", compiler, source_text, source_text_size, shader_kind, input_file_name, entry_point_name, additional_options);
            }
            return (MemorySegment)mh$.invokeExact(compiler, source_text, source_text_size, shader_kind, input_file_name, entry_point_name, additional_options);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class shaderc_compile_into_spv_assembly {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ShadercFFM.C_POINTER,
            ShadercFFM.C_POINTER,
            ShadercFFM.C_POINTER,
            ShadercFFM.C_LONG_LONG,
            ShadercFFM.C_INT,
            ShadercFFM.C_POINTER,
            ShadercFFM.C_POINTER,
            ShadercFFM.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("shaderc_compile_into_spv_assembly");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * shaderc_compilation_result_t shaderc_compile_into_spv_assembly(const shaderc_compiler_t compiler, const char *source_text, size_t source_text_size, shaderc_shader_kind shader_kind, const char *input_file_name, const char *entry_point_name, const shaderc_compile_options_t additional_options)
     * }
     */
    public static FunctionDescriptor shaderc_compile_into_spv_assembly$descriptor() {
        return shaderc_compile_into_spv_assembly.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * shaderc_compilation_result_t shaderc_compile_into_spv_assembly(const shaderc_compiler_t compiler, const char *source_text, size_t source_text_size, shaderc_shader_kind shader_kind, const char *input_file_name, const char *entry_point_name, const shaderc_compile_options_t additional_options)
     * }
     */
    public static MethodHandle shaderc_compile_into_spv_assembly$handle() {
        return shaderc_compile_into_spv_assembly.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * shaderc_compilation_result_t shaderc_compile_into_spv_assembly(const shaderc_compiler_t compiler, const char *source_text, size_t source_text_size, shaderc_shader_kind shader_kind, const char *input_file_name, const char *entry_point_name, const shaderc_compile_options_t additional_options)
     * }
     */
    public static MemorySegment shaderc_compile_into_spv_assembly$address() {
        return shaderc_compile_into_spv_assembly.ADDR;
    }
